tests/snapshots/transactions/tx_id_from_outputref/missing_param.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - transactions
    - tx-id-from-outputref
    - "1900212619"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <KEY>

Usage: kermit transactions tx-id-from-outputref <HINT> <KEY>

For more information, try '--help'.
