tests/snapshots/transactions/tx_id_from_outputref/no_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - transactions
    - tx-id-from-outputref
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <HINT>
  <KEY>

Usage: kermit transactions tx-id-from-outputref <HINT> <KEY>

For more information, try '--help'.
